--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^19.0.2",
     "@types/react-slick": "^0.23.13",
     "astro": "^5.1.0",
+    "astro-aws-amplify": "^0.1.0",
     "astro-embed": "^0.9.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
